@@ -1,3 +1,8 @@
+2005-03-15  Ian Piumarta  <ian.piumarta@inria.fr>
+
+	* vm/sqUnixMain.c (getImageName): Added, under extreme duress, to
+	deal with tpr laziness/sloppiness.
+
 2005-03-09  Ian Piumarta  <ian.piumarta@inria.fr>
 
 	* vm/sqUnixEvent.c (recordMouseEvent): Clear windowIndex field in
